--- a/style.css
+++ b/style.css
@@ -1,19 +1,59 @@
 body {
-    background-color: rgb(255, 255, 255);
+  background-color: rgb(118, 234, 155);
+  margin: 0; /* Reset default margin */
+}
+
+#cards {
+  display: grid;
+  justify-content: center;
+  grid-gap: 16px;
+  grid-template-rows: repeat(3, 210px);
+  grid-template-columns: repeat(4, 140px); /* Adjust columns for mobile and tablet */
+  padding: 20px; /* Add some padding for better spacing on small screens */
+}
+
+/* Media queries for mobile devices */
+@media (max-width: 768px) {
+  #cards {
+    grid-template-columns: repeat(2, 1fr);
   }
-  #cards{
-    display: grid;
-    justify-content: center;
-    grid-gap: 16px;
-    grid-template-rows: repeat(3, 210px);
-    grid-template-columns: repeat(6, 140px);
+}
+
+@media (min-width: 1554px) and (max-width: 2500px) {
+  #cards {
+    grid-template-columns: repeat(10, 1fr);
   }
+}
+
+
+@media (min-width: 1180px) and (max-width: 1554px) {
+  #cards {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+
+/* Media queries for iPad (horizontal) */
+@media (min-width: 768px) and (max-width: 1180px) {
+  #cards {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+/* Media queries for iPad (vertical) */
+@media (min-width: 768px) and (max-width: 820px) {
+  #cards {
+    grid-template-rows: repeat(5, 210px);
+  }
+}
+
+
+
 
   .card {
     height: 210px;
     width: 140px;
     border-radius: 10px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     position: relative;
     transform-style: preserve-3d;
     transition: all 0.5s ease-in-out;
@@ -60,26 +100,3 @@ body {
   h1{
     color: rgb(35, 35, 58);
   }
-
-  @media (max-width: 1000px) {
-    /* Adjust font sizes */
-    h1 {
-      font-size: 36px;
-    }
-    .cards {
-      grid-template-columns: repeat(3, 140px);
-      grid-template-rows: repeat(4, 210px);
-      grid-gap: 10px;
-    }
- 
-    .card {
-      height: 210px;
-      width: 140px;
-    }
- 
-    /* Adjust padding and font size for the restart button */
-    .actions button {
-      padding: 10px 20px;
-      font-size: 24px;
-    }
-}
